# iot-sdks-e2e-fx

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README-setup.md  README-tests.md  README-tips.md  README-wrapper.md  README.md  activate  activate.sh  azure-pipelines.yml  cgmanifest.json  e1.txt  e2.txt  event.txt  newtsaupload.gdntsa  requirements.txt
deploy-containers/: credentials.py  deploy.py  deploy_for_iotedge.py  deploy_for_iothub.py  edge_deployment.py  get_credentials.py  populate_credentials.py  remove_deployment.py  utilities.py
devdocs/: c-csharp-remote-debug-visual-studio-2017.md  csharp-remote-debug-vscode.md  csharp-remote-debug.md  edge_test_plan.md  framework-top-level-picture.md  framework_definitions.md  framework_definitions_visualized.md  hacks.md  language-independent-tests.md  linux_test_vm_setup.md  remote-debug-setup.md  running_your_first_test_suite.md  troubleshooting.md  using_pycharm.md  walkthroughs.md  whats-the-deal-with.md
docker-common/: .bash_aliases
docker_images/: .dockerignore
docker_images/c/wrapper/: CMakeLists.txt  main.cpp
docker_images/c/wrapper/glue/: ControlGlue.cpp  ControlGlue.h  DeviceGlue.cpp  DeviceGlue.h  GlueUtils.cpp  GlueUtils.h  InternalGlue.cpp  InternalGlue.h  ModuleGlue.cpp  ModuleGlue.h  RegistryGlue.cpp  RegistryGlue.h  ServiceGlue.cpp  ServiceGlue.h  iothub_sdk.h  json.cpp  json.h
droopy/: drop.py  main.py
horton_helpers/: config_yaml.py  connection_string.py  containers.py  dictionary_object.py  edge_configuration.py  edgehub_factory.py  horton_settings.py  identity_helpers.py  iothub_service_helper.py  service_helper.py  setup.py
pyscripts/: build_docker_image.py  create_deploy_horton.py  create_new_edgehub_device.py  deploy_test_containers.py  depoy_horton.py  docker_log_processor.py  docker_log_processor_filters.json  docker_tags.py  ensure-container.py  ensure_container.py  get_container_log.py  get_environment_variables.py  horton_create_containers.py  horton_create_identities.py  horton_delete_identities.py  horton_deploy_runner.py  horton_manifest.json  horton_set_image_params.py  horton_tools.py  image_variants.py  inject_into_junit.py  iothub_module_and_device.json  remove_edgehub_device.py  requirements.txt  update_edge_config.py
scenarios/: edgehub_module.json  iothub_module_and_device.json
scripts/: Tag-DockerImage.ps1  _ci-parse-parameters.sh  build-docker-image.ps1  build-horton-pipeline-local.ps1  ci-build-image.sh  ci-deploy-image.sh  ci-e2e-toplevel-fi.sh  ci-e2e-toplevel.sh  ci-pre-run.sh  ci-run-all-scenarios.sh  ci-run-fi.sh  ci-run-single-scenario.sh  clear-docker-logs.sh  colorecho.sh  create-new-edgehub-device.ps1  (+29 more)
(+623 files in other folders)
